Remove entity package and move MaritimePort struct under portsmanaging package.
