# docs/swagger.json
@@ -46,12 +46,12 @@
                 "summary": "Create a new port or update an existing one.",
                 "parameters": [
                     {
-                        "description": "Port Entry",
+                        "description": "MaritimePort Entry",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Port"
+                            "$ref": "#/definitions/portsmanaging.MaritimePort"
                         }
                     }
                 ],
@@ -74,7 +74,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Port ID",
+                        "description": "MaritimePort ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -85,7 +85,7 @@
         }
     },
     "definitions": {
-        "entity.Port": {
+        "portsmanaging.MaritimePort": {
             "type": "object",
             "properties": {
                 "alias": {
